# netkit

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/agents/: network-analyzer.md
.claude/skills/network-scan/: SKILL.md
netkit/: __init__.py  __main__.py  check.py  cli.py  device.py  dns_tools.py  downdetector.py  http_probe.py  iftop_ui.py  interface.py  local.py  mcp_server.py  output.py  packet_capture.py  ping.py  port_scanner.py  profiles.py  service_detect.py  speedtest.py  subnet.py  traceroute.py  utils.py  whois_lookup.py
netkit/vendors/: __init__.py  cisco.py  juniper.py
screenshots/: 01-help.txt  02-local-ports.txt  03-down-detector.txt
scripts/: make_screenshots.py  make_screenshots.sh
slides/: intro.md  pitch.md
