[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netkit"
version = "0.1.0"
description = "A full network engineer's CLI toolkit — ping, port scan, DNS, traceroute, whois, HTTP probe, subnet calculator, packet capture, and more."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "scapy>=2.5",
    "dnspython>=2.6",
    "httpx>=0.27",
    "python-whois>=0.9",
]

[project.scripts]
netkit = "netkit.cli:app"

[tool.setuptools.packages.find]
include = ["netkit*"]
