[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netkit"
version = "0.1.0"
description = "One CLI to ping, scan, trace, query, and probe your network — replaces nmap, dig, whois, ping, traceroute, curl, tcpdump."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "zawthetzt", email = "zawthetzt2017@gmail.com" },
]
keywords = [
    "networking", "network-scanner", "port-scanner", "dns-lookup",
    "ping", "traceroute", "whois", "subnet-calculator", "packet-capture",
    "network-engineer", "devops", "cli-tool",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Internet",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "scapy>=2.5",
    "dnspython>=2.6",
    "httpx>=0.27",
    "python-whois>=0.9",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.urls]
Homepage = "https://github.com/zawthetzt/netkit"
Repository = "https://github.com/zawthetzt/netkit"
Documentation = "https://github.com/zawthetzt/netkit#readme"
"Bug Tracker" = "https://github.com/zawthetzt/netkit/issues"

[project.scripts]
netkit = "netkit.cli:app"

[tool.setuptools.packages.find]
include = ["netkit*"]
